compiler-lsp/spago/tests/snapshots/lockfile__lockfile_sources_by_package.snap
---
source: compiler-lsp/spago/tests/lockfile.rs
expression: source_by_package_snapshot(&lockfile.unwrap())
---
aff: Registry { version: "8.0.0" }
  .spago/p/aff-8.0.0/src
  .spago/p/aff-8.0.0/test
affjax: Registry { version: "13.0.0" }
  .spago/p/affjax-13.0.0/src
  .spago/p/affjax-13.0.0/test
affjax-node: Registry { version: "1.0.0" }
  .spago/p/affjax-node-1.0.0/src
  .spago/p/affjax-node-1.0.0/test
affjax-web: Registry { version: "1.0.0" }
  .spago/p/affjax-web-1.0.0/src
  .spago/p/affjax-web-1.0.0/test
ansi: Registry { version: "7.0.0" }
  .spago/p/ansi-7.0.0/src
  .spago/p/ansi-7.0.0/test
argonaut-codecs: Registry { version: "9.1.0" }
  .spago/p/argonaut-codecs-9.1.0/src
  .spago/p/argonaut-codecs-9.1.0/test
argonaut-core: Registry { version: "7.0.0" }
  .spago/p/argonaut-core-7.0.0/src
  .spago/p/argonaut-core-7.0.0/test
arraybuffer-types: Registry { version: "3.0.2" }
  .spago/p/arraybuffer-types-3.0.2/src
  .spago/p/arraybuffer-types-3.0.2/test
arrays: Registry { version: "7.3.0" }
  .spago/p/arrays-7.3.0/src
  .spago/p/arrays-7.3.0/test
avar: Registry { version: "5.0.1" }
  .spago/p/avar-5.0.1/src
  .spago/p/avar-5.0.1/test
bifunctors: Registry { version: "6.1.0" }
  .spago/p/bifunctors-6.1.0/src
  .spago/p/bifunctors-6.1.0/test
catenable-lists: Registry { version: "7.0.0" }
  .spago/p/catenable-lists-7.0.0/src
  .spago/p/catenable-lists-7.0.0/test
console: Registry { version: "6.1.0" }
  .spago/p/console-6.1.0/src
  .spago/p/console-6.1.0/test
const: Registry { version: "6.0.0" }
  .spago/p/const-6.0.0/src
  .spago/p/const-6.0.0/test
contravariant: Registry { version: "6.0.0" }
  .spago/p/contravariant-6.0.0/src
  .spago/p/contravariant-6.0.0/test
control: Registry { version: "6.0.0" }
  .spago/p/control-6.0.0/src
  .spago/p/control-6.0.0/test
datetime: Registry { version: "6.1.0" }
  .spago/p/datetime-6.1.0/src
  .spago/p/datetime-6.1.0/test
debug: Registry { version: "6.0.2" }
  .spago/p/debug-6.0.2/src
  .spago/p/debug-6.0.2/test
deku-core: Git { url: Some("https://github.com/mikesol/purescript-deku.git"), rev: "65d6e9d289534d13d7d235fbe7f19e6e0bd17c72", version: "6", subdir: Some("deku-core") }
  .spago/p/deku-core/65d6e9d289534d13d7d235fbe7f19e6e0bd17c72/src
  .spago/p/deku-core/65d6e9d289534d13d7d235fbe7f19e6e0bd17c72/test
  .spago/p/deku-core/65d6e9d289534d13d7d235fbe7f19e6e0bd17c72/deku-core/src
  .spago/p/deku-core/65d6e9d289534d13d7d235fbe7f19e6e0bd17c72/deku-core/test
distributive: Registry { version: "6.0.0" }
  .spago/p/distributive-6.0.0/src
  .spago/p/distributive-6.0.0/test
effect: Registry { version: "4.0.0" }
  .spago/p/effect-4.0.0/src
  .spago/p/effect-4.0.0/test
either: Registry { version: "6.1.0" }
  .spago/p/either-6.1.0/src
  .spago/p/either-6.1.0/test
enums: Registry { version: "6.0.1" }
  .spago/p/enums-6.0.1/src
  .spago/p/enums-6.0.1/test
exceptions: Registry { version: "6.1.0" }
  .spago/p/exceptions-6.1.0/src
  .spago/p/exceptions-6.1.0/test
exists: Registry { version: "6.0.0" }
  .spago/p/exists-6.0.0/src
  .spago/p/exists-6.0.0/test
exitcodes: Registry { version: "4.0.0" }
  .spago/p/exitcodes-4.0.0/src
  .spago/p/exitcodes-4.0.0/test
fast-vect: Registry { version: "1.2.0" }
  .spago/p/fast-vect-1.2.0/src
  .spago/p/fast-vect-1.2.0/test
filterable: Registry { version: "5.0.0" }
  .spago/p/filterable-5.0.0/src
  .spago/p/filterable-5.0.0/test
fixture: Workspace
  ./src
  ./test
fixture-local: Local
  ../fixture-local/src
  ../fixture-local/test
foldable-traversable: Registry { version: "6.0.0" }
  .spago/p/foldable-traversable-6.0.0/src
  .spago/p/foldable-traversable-6.0.0/test
foreign: Registry { version: "7.0.0" }
  .spago/p/foreign-7.0.0/src
  .spago/p/foreign-7.0.0/test
foreign-object: Registry { version: "4.1.0" }
  .spago/p/foreign-object-4.1.0/src
  .spago/p/foreign-object-4.1.0/test
fork: Registry { version: "6.0.0" }
  .spago/p/fork-6.0.0/src
  .spago/p/fork-6.0.0/test
form-urlencoded: Registry { version: "7.0.0" }
  .spago/p/form-urlencoded-7.0.0/src
  .spago/p/form-urlencoded-7.0.0/test
free: Registry { version: "7.1.0" }
  .spago/p/free-7.1.0/src
  .spago/p/free-7.1.0/test
functions: Registry { version: "6.0.0" }
  .spago/p/functions-6.0.0/src
  .spago/p/functions-6.0.0/test
functors: Registry { version: "5.0.0" }
  .spago/p/functors-5.0.0/src
  .spago/p/functors-5.0.0/test
gen: Registry { version: "4.0.0" }
  .spago/p/gen-4.0.0/src
  .spago/p/gen-4.0.0/test
graphql-client: Git { url: Some("https://github.com/OxfordAbstracts/purescript-graphql-client.git"), rev: "fe24db5f0a79137edb1019b5757ce70d44efae10", version: "f", subdir: None }
  .spago/p/graphql-client/fe24db5f0a79137edb1019b5757ce70d44efae10/src
  .spago/p/graphql-client/fe24db5f0a79137edb1019b5757ce70d44efae10/test
halogen-subscriptions: Registry { version: "2.0.0" }
  .spago/p/halogen-subscriptions-2.0.0/src
  .spago/p/halogen-subscriptions-2.0.0/test
heterogeneous: Registry { version: "0.6.0" }
  .spago/p/heterogeneous-0.6.0/src
  .spago/p/heterogeneous-0.6.0/test
http-methods: Registry { version: "6.0.0" }
  .spago/p/http-methods-6.0.0/src
  .spago/p/http-methods-6.0.0/test
hyrule: Registry { version: "2.3.8" }
  .spago/p/hyrule-2.3.8/src
  .spago/p/hyrule-2.3.8/test
identity: Registry { version: "6.0.0" }
  .spago/p/identity-6.0.0/src
  .spago/p/identity-6.0.0/test
integers: Registry { version: "6.0.0" }
  .spago/p/integers-6.0.0/src
  .spago/p/integers-6.0.0/test
invariant: Registry { version: "6.0.0" }
  .spago/p/invariant-6.0.0/src
  .spago/p/invariant-6.0.0/test
js-bigints: Registry { version: "2.2.1" }
  .spago/p/js-bigints-2.2.1/src
  .spago/p/js-bigints-2.2.1/test
js-date: Registry { version: "8.0.0" }
  .spago/p/js-date-8.0.0/src
  .spago/p/js-date-8.0.0/test
js-timers: Registry { version: "6.1.0" }
  .spago/p/js-timers-6.1.0/src
  .spago/p/js-timers-6.1.0/test
js-uri: Registry { version: "3.1.0" }
  .spago/p/js-uri-3.1.0/src
  .spago/p/js-uri-3.1.0/test
lazy: Registry { version: "6.0.0" }
  .spago/p/lazy-6.0.0/src
  .spago/p/lazy-6.0.0/test
lcg: Registry { version: "4.0.0" }
  .spago/p/lcg-4.0.0/src
  .spago/p/lcg-4.0.0/test
lists: Registry { version: "7.0.0" }
  .spago/p/lists-7.0.0/src
  .spago/p/lists-7.0.0/test
literals: Registry { version: "1.0.2" }
  .spago/p/literals-1.0.2/src
  .spago/p/literals-1.0.2/test
maybe: Registry { version: "6.0.0" }
  .spago/p/maybe-6.0.0/src
  .spago/p/maybe-6.0.0/test
media-types: Registry { version: "6.0.0" }
  .spago/p/media-types-6.0.0/src
  .spago/p/media-types-6.0.0/test
mmorph: Registry { version: "7.0.0" }
  .spago/p/mmorph-7.0.0/src
  .spago/p/mmorph-7.0.0/test
newtype: Registry { version: "5.0.0" }
  .spago/p/newtype-5.0.0/src
  .spago/p/newtype-5.0.0/test
node-buffer: Registry { version: "9.0.0" }
  .spago/p/node-buffer-9.0.0/src
  .spago/p/node-buffer-9.0.0/test
node-event-emitter: Registry { version: "3.0.0" }
  .spago/p/node-event-emitter-3.0.0/src
  .spago/p/node-event-emitter-3.0.0/test
node-fs: Registry { version: "9.2.0" }
  .spago/p/node-fs-9.2.0/src
  .spago/p/node-fs-9.2.0/test
node-path: Registry { version: "5.0.1" }
  .spago/p/node-path-5.0.1/src
  .spago/p/node-path-5.0.1/test
node-process: Registry { version: "11.2.0" }
  .spago/p/node-process-11.2.0/src
  .spago/p/node-process-11.2.0/test
node-streams: Registry { version: "9.0.1" }
  .spago/p/node-streams-9.0.1/src
  .spago/p/node-streams-9.0.1/test
nonempty: Registry { version: "7.0.0" }
  .spago/p/nonempty-7.0.0/src
  .spago/p/nonempty-7.0.0/test
now: Registry { version: "6.0.0" }
  .spago/p/now-6.0.0/src
  .spago/p/now-6.0.0/test
nullable: Registry { version: "6.0.0" }
  .spago/p/nullable-6.0.0/src
  .spago/p/nullable-6.0.0/test
numbers: Registry { version: "9.0.1" }
  .spago/p/numbers-9.0.1/src
  .spago/p/numbers-9.0.1/test
open-memoize: Registry { version: "6.2.0" }
  .spago/p/open-memoize-6.2.0/src
  .spago/p/open-memoize-6.2.0/test
optparse: Registry { version: "5.0.1" }
  .spago/p/optparse-5.0.1/src
  .spago/p/optparse-5.0.1/test
ordered-collections: Registry { version: "3.2.0" }
  .spago/p/ordered-collections-3.2.0/src
  .spago/p/ordered-collections-3.2.0/test
orders: Registry { version: "6.0.0" }
  .spago/p/orders-6.0.0/src
  .spago/p/orders-6.0.0/test
parallel: Registry { version: "7.0.0" }
  .spago/p/parallel-7.0.0/src
  .spago/p/parallel-7.0.0/test
partial: Registry { version: "4.0.0" }
  .spago/p/partial-4.0.0/src
  .spago/p/partial-4.0.0/test
pipes: Registry { version: "8.0.0" }
  .spago/p/pipes-8.0.0/src
  .spago/p/pipes-8.0.0/test
posix-types: Registry { version: "6.0.0" }
  .spago/p/posix-types-6.0.0/src
  .spago/p/posix-types-6.0.0/test
prelude: Registry { version: "6.0.2" }
  .spago/p/prelude-6.0.2/src
  .spago/p/prelude-6.0.2/test
profunctor: Registry { version: "6.0.1" }
  .spago/p/profunctor-6.0.1/src
  .spago/p/profunctor-6.0.1/test
psci-support: Registry { version: "6.0.0" }
  .spago/p/psci-support-6.0.0/src
  .spago/p/psci-support-6.0.0/test
quickcheck: Registry { version: "8.0.1" }
  .spago/p/quickcheck-8.0.1/src
  .spago/p/quickcheck-8.0.1/test
random: Registry { version: "6.0.0" }
  .spago/p/random-6.0.0/src
  .spago/p/random-6.0.0/test
record: Registry { version: "4.0.0" }
  .spago/p/record-4.0.0/src
  .spago/p/record-4.0.0/test
refs: Registry { version: "6.0.0" }
  .spago/p/refs-6.0.0/src
  .spago/p/refs-6.0.0/test
safe-coerce: Registry { version: "2.0.0" }
  .spago/p/safe-coerce-2.0.0/src
  .spago/p/safe-coerce-2.0.0/test
spec: Registry { version: "8.1.1" }
  .spago/p/spec-8.1.1/src
  .spago/p/spec-8.1.1/test
spec-discovery: Registry { version: "8.4.0" }
  .spago/p/spec-discovery-8.4.0/src
  .spago/p/spec-discovery-8.4.0/test
spec-node: Registry { version: "0.0.3" }
  .spago/p/spec-node-0.0.3/src
  .spago/p/spec-node-0.0.3/test
st: Registry { version: "6.2.0" }
  .spago/p/st-6.2.0/src
  .spago/p/st-6.2.0/test
string-parsers: Registry { version: "8.0.0" }
  .spago/p/string-parsers-8.0.0/src
  .spago/p/string-parsers-8.0.0/test
strings: Registry { version: "6.0.1" }
  .spago/p/strings-6.0.1/src
  .spago/p/strings-6.0.1/test
stringutils: Registry { version: "0.0.12" }
  .spago/p/stringutils-0.0.12/src
  .spago/p/stringutils-0.0.12/test
tailrec: Registry { version: "6.1.0" }
  .spago/p/tailrec-6.1.0/src
  .spago/p/tailrec-6.1.0/test
tldr: Registry { version: "0.0.0" }
  .spago/p/tldr-0.0.0/src
  .spago/p/tldr-0.0.0/test
transformers: Registry { version: "6.1.0" }
  .spago/p/transformers-6.1.0/src
  .spago/p/transformers-6.1.0/test
tuples: Registry { version: "7.0.0" }
  .spago/p/tuples-7.0.0/src
  .spago/p/tuples-7.0.0/test
type-equality: Registry { version: "4.0.1" }
  .spago/p/type-equality-4.0.1/src
  .spago/p/type-equality-4.0.1/test
typelevel-lists: Registry { version: "2.1.0" }
  .spago/p/typelevel-lists-2.1.0/src
  .spago/p/typelevel-lists-2.1.0/test
typelevel-peano: Registry { version: "1.0.1" }
  .spago/p/typelevel-peano-1.0.1/src
  .spago/p/typelevel-peano-1.0.1/test
typelevel-prelude: Registry { version: "7.0.0" }
  .spago/p/typelevel-prelude-7.0.0/src
  .spago/p/typelevel-prelude-7.0.0/test
unfoldable: Registry { version: "6.0.0" }
  .spago/p/unfoldable-6.0.0/src
  .spago/p/unfoldable-6.0.0/test
unicode: Registry { version: "6.0.0" }
  .spago/p/unicode-6.0.0/src
  .spago/p/unicode-6.0.0/test
unsafe-coerce: Registry { version: "6.0.0" }
  .spago/p/unsafe-coerce-6.0.0/src
  .spago/p/unsafe-coerce-6.0.0/test
unsafe-reference: Registry { version: "5.0.0" }
  .spago/p/unsafe-reference-5.0.0/src
  .spago/p/unsafe-reference-5.0.0/test
untagged-union: Registry { version: "1.0.0" }
  .spago/p/untagged-union-1.0.0/src
  .spago/p/untagged-union-1.0.0/test
variant: Registry { version: "8.0.0" }
  .spago/p/variant-8.0.0/src
  .spago/p/variant-8.0.0/test
web-dom: Registry { version: "6.0.0" }
  .spago/p/web-dom-6.0.0/src
  .spago/p/web-dom-6.0.0/test
web-dom-parser: Registry { version: "8.0.0" }
  .spago/p/web-dom-parser-8.0.0/src
  .spago/p/web-dom-parser-8.0.0/test
web-events: Registry { version: "4.0.0" }
  .spago/p/web-events-4.0.0/src
  .spago/p/web-events-4.0.0/test
web-file: Registry { version: "4.0.0" }
  .spago/p/web-file-4.0.0/src
  .spago/p/web-file-4.0.0/test
web-html: Registry { version: "4.1.0" }
  .spago/p/web-html-4.1.0/src
  .spago/p/web-html-4.1.0/test
web-storage: Registry { version: "5.0.0" }
  .spago/p/web-storage-5.0.0/src
  .spago/p/web-storage-5.0.0/test
web-uievents: Registry { version: "5.0.0" }
  .spago/p/web-uievents-5.0.0/src
  .spago/p/web-uievents-5.0.0/test
web-xhr: Registry { version: "5.0.1" }
  .spago/p/web-xhr-5.0.1/src
  .spago/p/web-xhr-5.0.1/test
yoga-json: Registry { version: "5.1.0" }
  .spago/p/yoga-json-5.1.0/src
  .spago/p/yoga-json-5.1.0/test
yoga-tree: Registry { version: "1.0.0" }
  .spago/p/yoga-tree-1.0.0/src
  .spago/p/yoga-tree-1.0.0/test
