compiler-lsp/spago/tests/snapshots/lockfile__source_files_by_package.snap
---
source: compiler-lsp/spago/tests/lockfile.rs
expression: snapshot
---
aff: Registry { version: "8.0.0" }
affjax: Registry { version: "13.0.0" }
affjax-node: Registry { version: "1.0.0" }
affjax-web: Registry { version: "1.0.0" }
ansi: Registry { version: "7.0.0" }
argonaut-codecs: Registry { version: "9.1.0" }
argonaut-core: Registry { version: "7.0.0" }
arraybuffer-types: Registry { version: "3.0.2" }
arrays: Registry { version: "7.3.0" }
avar: Registry { version: "5.0.1" }
bifunctors: Registry { version: "6.1.0" }
catenable-lists: Registry { version: "7.0.0" }
console: Registry { version: "6.1.0" }
const: Registry { version: "6.0.0" }
contravariant: Registry { version: "6.0.0" }
control: Registry { version: "6.0.0" }
datetime: Registry { version: "6.1.0" }
debug: Registry { version: "6.0.2" }
deku-core: Git { url: Some("https://github.com/mikesol/purescript-deku.git"), rev: "65d6e9d289534d13d7d235fbe7f19e6e0bd17c72", version: "65d6e9d289534d13d7d235fbe7f19e6e0bd17c72", subdir: Some("deku-core") }
distributive: Registry { version: "6.0.0" }
effect: Registry { version: "4.0.0" }
either: Registry { version: "6.1.0" }
enums: Registry { version: "6.0.1" }
exceptions: Registry { version: "6.1.0" }
exists: Registry { version: "6.0.0" }
exitcodes: Registry { version: "4.0.0" }
fast-vect: Registry { version: "1.2.0" }
filterable: Registry { version: "5.0.0" }
fixture: Workspace
  ./spago/tests/fixture/src/Main.purs
  ./spago/tests/fixture/test/Test/Main.purs
fixture-local: Local
  ./spago/tests/fixture-local/src/Main.purs
  ./spago/tests/fixture-local/test/Test/Main.purs
foldable-traversable: Registry { version: "6.0.0" }
foreign: Registry { version: "7.0.0" }
foreign-object: Registry { version: "4.1.0" }
fork: Registry { version: "6.0.0" }
form-urlencoded: Registry { version: "7.0.0" }
free: Registry { version: "7.1.0" }
functions: Registry { version: "6.0.0" }
functors: Registry { version: "5.0.0" }
gen: Registry { version: "4.0.0" }
graphql-client: Git { url: Some("https://github.com/OxfordAbstracts/purescript-graphql-client.git"), rev: "fe24db5f0a79137edb1019b5757ce70d44efae10", version: "fe24db5f0a79137edb1019b5757ce70d44efae10", subdir: None }
halogen-subscriptions: Registry { version: "2.0.0" }
heterogeneous: Registry { version: "0.6.0" }
http-methods: Registry { version: "6.0.0" }
hyrule: Registry { version: "2.3.8" }
identity: Registry { version: "6.0.0" }
integers: Registry { version: "6.0.0" }
invariant: Registry { version: "6.0.0" }
js-bigints: Registry { version: "2.2.1" }
js-date: Registry { version: "8.0.0" }
js-timers: Registry { version: "6.1.0" }
js-uri: Registry { version: "3.1.0" }
lazy: Registry { version: "6.0.0" }
lcg: Registry { version: "4.0.0" }
lists: Registry { version: "7.0.0" }
literals: Registry { version: "1.0.2" }
maybe: Registry { version: "6.0.0" }
media-types: Registry { version: "6.0.0" }
mmorph: Registry { version: "7.0.0" }
newtype: Registry { version: "5.0.0" }
node-buffer: Registry { version: "9.0.0" }
node-event-emitter: Registry { version: "3.0.0" }
node-fs: Registry { version: "9.2.0" }
node-path: Registry { version: "5.0.1" }
node-process: Registry { version: "11.2.0" }
node-streams: Registry { version: "9.0.1" }
nonempty: Registry { version: "7.0.0" }
now: Registry { version: "6.0.0" }
nullable: Registry { version: "6.0.0" }
numbers: Registry { version: "9.0.1" }
open-memoize: Registry { version: "6.2.0" }
optparse: Registry { version: "5.0.1" }
ordered-collections: Registry { version: "3.2.0" }
orders: Registry { version: "6.0.0" }
parallel: Registry { version: "7.0.0" }
partial: Registry { version: "4.0.0" }
pipes: Registry { version: "8.0.0" }
posix-types: Registry { version: "6.0.0" }
prelude: Registry { version: "6.0.2" }
profunctor: Registry { version: "6.0.1" }
psci-support: Registry { version: "6.0.0" }
quickcheck: Registry { version: "8.0.1" }
random: Registry { version: "6.0.0" }
record: Registry { version: "4.0.0" }
refs: Registry { version: "6.0.0" }
safe-coerce: Registry { version: "2.0.0" }
spec: Registry { version: "8.1.1" }
spec-discovery: Registry { version: "8.4.0" }
spec-node: Registry { version: "0.0.3" }
st: Registry { version: "6.2.0" }
string-parsers: Registry { version: "8.0.0" }
strings: Registry { version: "6.0.1" }
stringutils: Registry { version: "0.0.12" }
tailrec: Registry { version: "6.1.0" }
tldr: Registry { version: "0.0.0" }
transformers: Registry { version: "6.1.0" }
tuples: Registry { version: "7.0.0" }
type-equality: Registry { version: "4.0.1" }
typelevel-lists: Registry { version: "2.1.0" }
typelevel-peano: Registry { version: "1.0.1" }
typelevel-prelude: Registry { version: "7.0.0" }
unfoldable: Registry { version: "6.0.0" }
unicode: Registry { version: "6.0.0" }
unsafe-coerce: Registry { version: "6.0.0" }
unsafe-reference: Registry { version: "5.0.0" }
untagged-union: Registry { version: "1.0.0" }
variant: Registry { version: "8.0.0" }
web-dom: Registry { version: "6.0.0" }
web-dom-parser: Registry { version: "8.0.0" }
web-events: Registry { version: "4.0.0" }
web-file: Registry { version: "4.0.0" }
web-html: Registry { version: "4.1.0" }
web-storage: Registry { version: "5.0.0" }
web-uievents: Registry { version: "5.0.0" }
web-xhr: Registry { version: "5.0.1" }
yoga-json: Registry { version: "5.1.0" }
yoga-tree: Registry { version: "1.0.0" }
